[package]
name = "authhack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
clap = { version = "4.2.4", features = ["derive"] }
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["full"] }
